
v1.0.0:
 - update for new hsite v3 api
 - re-add light theme & make it the default
 - add log spliting: logs get split into multiple files sorted on age
 - add a download speed and ETA field while installing titles
 - add random title button
 - improve utf8 handling
 - fix issue where categories weren't sorted as on website
 - fix issue where closing the app from home would freeze the system
 - fix issue where spamming toggle on a "true"/"false" setting would crash the system

v0.2.1:
 - fixed net indicator going partly hidden when in a long list
 - add clarification after clicking on find missing
 - fix bug where clearing logs would crash 3hs
 - fix bug where selecting games will prompt to install the base game

v0.2.0:
 - implemented resuming downloads
 - fix konami code easter egg not working
 - fix bug where single line panic message wouldn't show
 - add find missing dlc/updates feature
 - add translations
 - add proxy support
 - add sprites for battery
 - add a loading animation
 - major speed improvements
 - add luma locale emulator support
 - extended meta is now lazily loaded
 - 3hs will now ask for extra content after installing a game
 - 3hs will now warn if you're trying to install a dlc/update for a game which you
   don't have installed
 - add logs menu for clearing logs
 - add network status indicator
 - fix issue where 3hs would crash if WiFi was not available
 - fix issue where 3hs wouldn't work if time & date was wrong
 - fix issue where extended meta wasn't showing in search
 - fix issue where 3hs was unable to load a title name if the name contained any
   complex characters

v0.1.6:
 - added extended meta screen
 - fix cdn not working

v0.1.5:
 - fixed buttons being blank

v0.1.4:
 - fixed issue decoding utf16 and scrolling if text didn't overflow in texts and generally improved the look of it
 - fixed crash that would occur if you attempted to add a title to the queue or when you try to install a title

v0.1.3: