@@ -29,6 +29,7 @@
 #define APPERR_NOSIZE MAKERESULT(RL_PERMANENT, RS_NOTSUPPORTED, RM_APPLICATION, 6)
 #define APPERR_JSON_FAIL MAKERESULT(RL_PERMANENT, RS_INVALIDSTATE, RM_APPLICATION, 7)
 #define APPERR_NON200 MAKERESULT(RL_PERMANENT, RS_INVALIDSTATE, RM_APPLICATION, 8)
+#define APPERR_API_FAIL MAKERESULT(RL_PERMANENT, RS_INVALIDSTATE, RM_APPLICATION, 9)
 
 
 typedef struct error_container
