@@ -279,7 +279,7 @@ builtin_controls_done:
 		 **/
 		void set_pos(size_t p)
 		{
-			if(p > 0 && p < this->lines.size())
+			if(p < this->lines.size())
 			{
 				this->view = p > this->view + this->visable() ? (p > this->last_full_view() ? this->last_full_view() : p) : this->view;
 				this->pos = p;
