@@ -128,7 +128,7 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			[str::search_zero_results] = "Search gave 0 results\nPress " UI_GLYPH_A " to go back",
 			[str::credits] = "Credits",
 			[str::extra_content] = "Add extra content to queue?",
-			[str::ask_extra] = "Ask for extra content",
+			[str::check_extra] = "Search for extra content",
 			[str::no_req] = "no requests made yet", /* context: hlink requests */
 			[str::invalid_query] = "Invalid query\nPress " UI_GLYPH_A " to go back",
 			[str::min_constraint] = "Current 3hs version %1 is lower than the required version %2",
@@ -148,7 +148,7 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			[str::time_format_desc] = "Your preferred time format. Either 24h or 12h",
 			[str::language_desc] = "The language 3hs is in. Note that to update all text you might need to restart 3hs",
 			[str::lumalocalemode_desc] = "The mode LumaLocale autosetter uses. Automatic selects a language automatically. If you choose manual 3hs will prompt for a region after the installation of a content",
-			[str::ask_extra_desc] = "Ask for extra content after an installation.",
+			[str::check_extra_desc] = "Search for extra content after an installation.",
 			[str::proxy_desc] = "Configure a proxy. If you don't know what you're doing don't touch this",
 			[str::install_all] = "Install all", /* context: install all items in queue */
 			[str::install_no_base] = "DLC/Update doesn't have the base game installed. Install regardless?",
@@ -264,7 +264,7 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			[str::search_zero_results] =  "Zoekopdracht gaf 0 resultaten\nKlik op " UI_GLYPH_A " om terug te gaan",
 			[str::credits] = "Met dank aan",
 			[str::extra_content] = "Extras aan wachtrij toevoegen?",
-			[str::ask_extra] = "Vraag naar extras",
+			[str::check_extra] = "Zoek naar extras",
 			[str::no_req] = "Er is nog niets gebeurd",
 			[str::invalid_query] = "Ongeldige zoekopdracht\nKlik op " UI_GLYPH_A " om terug te gaan",
 			[str::min_constraint] = "Huidige 3hs versie %1 is lager dan het minimale wat %2 is",
@@ -284,7 +284,7 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			[str::time_format_desc] = "Jouw favoriete tijd formaat. 24h of 12h. In Nederland wordt 24h het vaakst gebruikt",
 			[str::language_desc] = "De taal waarin alles wordt weergegeven. Soms moet je 3hs herstarten voordat alles veranderd is",
 			[str::lumalocalemode_desc] = "De wijze waarom LumaLocale bestanden worden gegenereerd. Automatisch zal alles automatisch regelen. Als je handmatig kiest zal je worden gevraagt naar de taal en regio",
-			[str::ask_extra_desc] = "Vraag om extras te installeren na de installatie van een spel",
+			[str::check_extra_desc] = "Zoek naar extras na het installeren van een spel",
 			[str::proxy_desc] = "Configureer een proxy. Als je niet weet wat dat is raak deze optie dan niet aan",
 			[str::install_all] = "Installeer alles",
 			[str::install_no_base] = "Het spel waarbij deze extra hoort is niet geïnstalleerd. Toch doorgaan?",
@@ -397,7 +397,7 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			[str::search_zero_results] = "Suche ergab keine Ergebnisse\nDrücke " UI_GLYPH_A " um zurückzukehren",
 			[str::credits] = "Mitwirkende",
 			STUB(extra_content),
-			STUB(ask_extra),
+			STUB(check_extra),
 			STUB(no_req),
 			STUB(invalid_query),
 			STUB(min_constraint),
@@ -417,7 +417,7 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			STUB(time_format_desc),
 			STUB(language_desc),
 			STUB(lumalocalemode_desc),
-			STUB(ask_extra_desc),
+			STUB(check_extra_desc),
 			STUB(proxy_desc),
 			STUB(install_all),
 			STUB(install_no_base),
@@ -531,7 +531,7 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			[str::search_zero_results] = "La búsqueda no dió resultados\nPresiona " UI_GLYPH_A " para regresar",
 			[str::credits] = "Créditos",
 			[str::extra_content] = "¿Añadir contenido extra a la cola?",
-			[str::ask_extra] = "Pedir contenido extra",
+			[str::check_extra] = "Buscar contenido extra",
 			[str::no_req] = "No hay solicitudes hechas todavía", /* context: hlink requests */
 			[str::invalid_query] = "Consulta invalida\nPresiona " UI_GLYPH_A " para volver",
 			[str::min_constraint] = "La versión de 3hs %1 es inferior a la versión requerida %2",
@@ -551,7 +551,7 @@ static const char *strtab[lang::_i_max][str::_i_max] =
 			[str::time_format_desc] = "Formato de tiempo preferido. Entre 24 o 12 horas",
 			[str::language_desc] = "El lenguaje que 3hs usa. Nótese que para actualizar todo el texto, tienes que reiniciar 3hs",
 			[str::lumalocalemode_desc] = "El modo en la que el auto selector de LumaLocale funciona. Automático selecciona un lenjuage automáticamente. Si eliges manual, 3hs pedirá por una región después de la instalación de contenido",
-			[str::ask_extra_desc] = "Pide por contenido extra después de la instalación.",
+			[str::check_extra_desc] = "Busca por contenido extra después de la instalación.",
 			[str::proxy_desc] = "Configurar un proxy. Si no sabes lo que estás haciendo, no toques esto",
 			[str::install_all] = "Instalar todo", /* context: install all items in queue */
 			[str::install_no_base] = "La actualización/DLC no tiene el juego base installado. ¿Instalar de todas maneras?",
